# bsd_gt_superpixels

./: CMakeLists.txt  README.md  SplitterMain.cpp
SplitterAlgo/: CMakeLists.txt  Splitter.cpp  Splitter.h  Squares.cpp  Squares.h
SplitterGui/: Berkeley.cpp  Berkeley.h  CMakeLists.txt  Converter.h  Dataset.cpp  Dataset.h  DirIO.cpp  DirIO.h  MainSplitterGUI.cpp  MainSplitterGUI.h  Pexel.cpp  Pexel.h  SplitterGUI.ui
